--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="libs/jgoodies-common-1.8.0.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Pede/Desktop/json-simple-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/json"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
