--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="lib" path="libs/jgoodies-common-1.8.0.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-forms-1.8.0.jar"/>
-	<classpathentry kind="lib" path="/Users/Pede/Desktop/json-simple-1.1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/json"/>
+	<classpathentry kind="lib" path="libs/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
