--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="libs/jgoodies-forms-1.8.0.jar"/>
 	<classpathentry kind="lib" path="libs/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="libs/ApacheWinkJAXRSLibrary/json-20080701.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
